Added pre-commit and modified state.py and added test for it

--- a/.gitignore
+++ b/.gitignore
@@ -179,5 +179,8 @@ cython_debug/
 # Images
 *.png
 
+# Pre-commit configuration file
+.pre-commit-config.yaml
+
 # Particular folder
 mlmc_gaussian_example/
